--- a/NewCarRental/Web.config
+++ b/NewCarRental/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NewCarRental-20181221084502.mdf;Initial Catalog=aspnet-NewCarRental-20181221084502;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="AccountConnStr" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=CarRental;Integrated Security=True" providerName="System.Data.SqlClient" />
     
     <add name="CarRentalEntities" connectionString="metadata=res://*/Models.DAL.DBContext.csdl|res://*/Models.DAL.DBContext.ssdl|res://*/Models.DAL.DBContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=CarRental;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
