--- a/NewCarRental/Web.config
+++ b/NewCarRental/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="AccountConnStr" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=CarRental;Integrated Security=True" providerName="System.Data.SqlClient" />
-    
+
     <add name="CarRentalEntities" connectionString="metadata=res://*/Models.DAL.DBContext.csdl|res://*/Models.DAL.DBContext.ssdl|res://*/Models.DAL.DBContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=CarRental;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
@@ -22,7 +22,10 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime
+      targetFramework="4.6.1"
+      maxRequestLength="4096000"
+      executionTimeout="3600"/>
   </system.web>
   <system.webServer>
     <modules>
