--- a/NewCarRental/NewCarRental.csproj
+++ b/NewCarRental/NewCarRental.csproj
@@ -253,6 +253,7 @@
       <DependentUpon>DBContext.edmx</DependentUpon>
       <LastGenOutput>DBContext.Context.cs</LastGenOutput>
     </Content>
+    <Content Include="Models\DAL\DBContext.edmx.sql" />
     <Content Include="Models\DAL\DBContext.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>DBContext.edmx</DependentUpon>
