--- a/NewCarRental/Web.config
+++ b/NewCarRental/Web.config
@@ -22,10 +22,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime
-      targetFramework="4.6.1"
-      maxRequestLength="4096000"
-      executionTimeout="3600"/>
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="4096000" executionTimeout="3600" />
   </system.web>
   <system.webServer>
     <modules>
